Added payment gateway

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -12,3 +12,7 @@ logging.level.org.springframework.security=DEBUG
 logging.level.org.springframework.cloud.openfeign=DEBUG
 logging.level.feign=DEBUG
 spring.main.allow-circular-references=true
+
+razorpay.key.id=rzp_test_GiTWmjeEzxuX9Q
+razorpay.secret.key=ivTCmWwrbBlKHZpyXKHEvHKo
+
