--- a/pom.xml
+++ b/pom.xml
@@ -6,8 +6,8 @@
 	<parent>
 		<groupId>org.springframework.boot</groupId>
 		<artifactId>spring-boot-starter-parent</artifactId>
-		<version>2.7.13</version> <!-- Compatible with Java 8 -->
-		<relativePath/> <!-- lookup parent from repository -->
+		<version>2.7.13</version>
+		<relativePath/>
 	</parent>
 
 	<groupId>com.example</groupId>
@@ -18,7 +18,7 @@
 
 	<properties>
 		<java.version>1.8</java.version>
-		<spring-cloud.version>2021.0.6</spring-cloud.version> <!-- Compatible with Spring Boot 2.7 -->
+		<spring-cloud.version>2021.0.6</spring-cloud.version>
 	</properties>
 
 	<dependencies>
@@ -29,18 +29,21 @@
 		<dependency>
 			<groupId>org.slf4j</groupId>
 			<artifactId>slf4j-api</artifactId>
-			<version>1.7.32</version> <!-- Use the latest version -->
+			<version>1.7.32</version>
 		</dependency>
-
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-data-redis</artifactId>
 		</dependency>
 		<dependency>
+			<groupId>com.razorpay</groupId>
+			<artifactId>razorpay-java</artifactId>
+			<version>1.4.5 </version>
+		</dependency>
+		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-security</artifactId>
 		</dependency>
-
 		<dependency>
 			<groupId>io.jsonwebtoken</groupId>
 			<artifactId>jjwt</artifactId>
@@ -54,7 +57,6 @@
 			<groupId>org.springframework.cloud</groupId>
 			<artifactId>spring-cloud-starter-openfeign</artifactId>
 		</dependency>
-
 		<dependency>
 			<groupId>com.mysql</groupId>
 			<artifactId>mysql-connector-j</artifactId>
@@ -76,6 +78,7 @@
 			<scope>test</scope>
 		</dependency>
 	</dependencies>
+
 
 	<dependencyManagement>
 		<dependencies>
